Fix alignment of the inspector help icons in Firefox. ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=68410873

--- a/resource/main.css
+++ b/resource/main.css
@@ -1117,12 +1117,10 @@ div.cm-preview-link:hover, div.cm-preview-link.cm-preview-active {
   padding-top:  0;
 }
 .cm-editors > tr > th {
-  padding-right: 24px;
   font-weight: normal;
   color: #666;
   white-space: nowrap;
   width: 1%;
-  position: relative;
 }
 .cm-editors > .cm-text-input-row > th,
 .cm-editors > .cm-text-editor > th,
@@ -1143,7 +1141,8 @@ div.cm-preview-link:hover, div.cm-preview-link.cm-preview-active {
 .cm-editors > .cm-textarea-row > th,
 .cm-editors > .cm-html-editor > th,
 .cm-editors > .cm-layer-menu-editor > th,
-.cm-editors > .cm-wms-menu-editor > th {
+.cm-editors > .cm-wms-menu-editor > th,
+.cm-editors > .cm-lat-lon-box-editor > th {
   vertical-align: top;
   padding-top: 11px; /* align label with first line of textarea/select */
 }
@@ -1153,20 +1152,24 @@ div.cm-preview-link:hover, div.cm-preview-link.cm-preview-active {
   padding: 3px 2px;
   border: 1px solid #c0c0c0;
 }
-.cm-help-icon {
-  display: inline-block;
-  cursor: pointer;
-  position: absolute;
-  right: 6px;
+.cm-help-container {
+  position: relative;
 }
-div.cm-help-icon {
+.cm-help-container label {
+  display: inline-block;
+  padding-right: 24px;
+}
+.cm-help-icon {
   width: 15px;
   height: 15px;
   background: url('question.png') no-repeat 0 1px;
   background-size: 14px;
+  cursor: pointer;
+  position: absolute;
+  right: 6px;
   display: none;
 }
-.cm-editors > tr:hover > th > div.cm-help-icon {
+.cm-editors tr:hover .cm-help-icon {
   display: inline-block;
 }
 .cm-editors-tooltip {
